[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.136.0",
    "html5lib>=1.1",
    "langchain>=0.2",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "lxml>=6.1.0",
    "openai>=1.30.0",
    "orjson>=3.9.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.45.0",
    "tavily-python>=0.3.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
